samples/_failures_safe/1761365048_d0442f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63e0582c.c: In function ‘main’:
./samples/SAFE/__tmp_63e0582c.c:152:10: error: ‘EVENT_P’ undeclared (first use in this function)
  152 |         {EVENT_P
      |          ^~~~~~~
./samples/SAFE/__tmp_63e0582c.c:152:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_63e0582c.c:153: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_63e0582c.c:152:9: note: to match this ‘{’
  152 |         {EVENT_P
      |         ^
./samples/SAFE/__tmp_63e0582c.c:152:9: error: expected declaration or statement at end of input
